form/form.css
form {
  position: relative;
  display: grid;
  gap: 3rem;
  width: min(100%, 1000px);
  padding-bottom: 2rem;
  color: hsl(var(--clr-text));
  background-color: hsl(var(--clr-primary));

  header {
    display: flex;
    align-items: end;
    justify-content: end;
    height: 200px;
    background-image: url("carSmall.avif");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    :where(h1) {
      font-family: var(--ff-header);
      font-size: var(--fs-450);
      font-weight: var(--fw-regular);
      text-transform: capitalize;
      padding: 0.5rem;
      color: hsl(var(--clr-subtext));
      background: linear-gradient(
        to top left,
        hsla(var(--clr-primary), 0.7) 20%,
        hsla(var(--clr-subtext), 0.2)
        );
      border-top-left-radius: 0.5rem;
    }
  }

  [class$="section"] {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }
}

.form-field {
  position: relative;
  display: flex;
  flex-direction: column;

  &:has(input:focus) label,
  &:has(input:not(:placeholder-shown)) label {
    top: -14px;
    left: 2px;
    font-size: calc(var(--fs-400) - 2px);
  }

  &:has(.selected-display:not(:empty)) {
    input { display: none; }
    .selected-display { display: flex; }
  }

  &:has(input[aria-expanded="true"]) {
    input { display: block };
    .selected-display {display: none;}
  }

  label {
    position: absolute;
    top: 50%;
    left: 8px;
    color: hsl(var(--clr-subtext));
    transform: translateY(-50%);
    transition: 0.2s ease all;
  }

  input {
    &[type="password"] {
      padding-right: 2.5rem;
      
      &:not(:placeholder-shown) ~ .password-toggle {
        display: block;
      }
    }
    
    &:-webkit-autofill {
      -webkit-box-shadow: 0 0 0 100px hsl(var(--clr-primary)) inset !important;
      -webkit-text-fill-color: hsl(var(--clr-text)) !important;
      caret-color: hsl(var(--clr-text));
      
      &::first-line {
        color: hsl(var(--clr-text));
      }
    }
  }
  
  .close-modal-btn {
    display: none;
    align-self: flex-end;
  }
}

.form-field input,
.selected-display {
  width: 250px;
  height: 36px;
  padding-left: 0.5rem;
  color: hsl(var(--clr-text));
  background-color: transparent;
  border: 1px solid hsl(var(--clr-accent));
  border-radius: 0.5rem;
  
  &:hover {
    border-color: #90A4AE;
  }
  
  &:focus {
    outline: none;
    border-color: hsl(var(--clr-secondary));
    box-shadow: 0 0 0 2px rgba(0, 229, 255, 0.2);
  }
}

.selected-display {
  display: none;
  align-items: center;
  gap: 0.5rem;
}

.icon-btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 8px;
  border: none;
  border-radius: 8px;
  background-color: transparent;
  cursor: pointer;

  svg {
    width: 24px;
    height: 24px;
    fill: hsl(var(--clr-subtext));
  }
}

.password-toggle {
  display: none;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

.dropdown {
  display: none;
  flex-direction: column;
  gap: 0.5rem;
  padding-top: 0.5rem;
  overflow-y: auto;
}

.dropdown-item {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  width: 250px;
  padding: 0.25rem;
  border-radius: 0.5rem;
  color: hsl(var(--clr-subtext));
  
  &[aria-selected="true"] {
    background-color: hsl(var(--clr-subtext));
    color: hsl(var(--clr-primary));
  }
}

.flag {
  width: 20px;
  height: 16px;
  border-radius: 8px;
  object-fit: cover;
  border: 1px solid white;
}

button[type="submit"] {
  justify-self: center;
  width: 250px;
  padding: 8px 16px;
  font-weight: 600;
  letter-spacing: 0.5px;
  color: hsl(var(--clr-primary));
  background-color: hsl(var(--clr-subtext));
  border: 1px solid hsl(var(--clr-accent));
  border-radius: 0.5rem;
  cursor: pointer;
  transition: background-color 0.2s ease, box-shadow 0.2s ease, transform 0,1s ease;

  &:hover,
  &:focus {
    background-color: hsl(var(--clr-primary));
    color: hsl(var(--clr-subtext));
    border-color: hsl(var(--clr-subtext));
    transform: translateY(-2px);
  }

  &:focus {
    outline: none;
    box-shadow: 0 0 0 2px rgba(0, 229, 255, 0.2);
    border-color: hsl(var(--clr-secondary));
  }
}




@media (max-width: 650px) {
  body:has(input[aria-expanded="true"]) {overflow: hidden;}
  
  .form-field:has(input[aria-expanded="true"]) {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100dvh;
    padding: 0.5rem 1rem;
    background-color: hsl(var(--clr-primary));
    z-index: 10;

    label {
      position: static;
      transform: none;
      transition: none;
      font-size: 1rem;
    }

    .dropdown { display: flex; }
    
    .flag {
      width: 24px;
      height: 20px;
    }
    
    .close-modal-btn { display: block; }
  }
}

@media (min-width: 650px) {
  form {
    header {
      background-image: url("car.avif");
      height: 250px;

      h1 {
        font-size: var(--fs-500);
      }
    }
  }
}

@media (min-width: 800px) {
  form {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto auto;
    padding-bottom: 0;
    
    header {
      grid-row: 1 / 4;
      height: 100%;
    }

    .auth-section {
      margin-top: 2rem;
    }

    button[type="submit"] {
      margin-bottom: 2rem;
    }
  }
}

